samples/_failures_safe/1761625400_20c584_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98c3e3c1.c: In function ‘main’:
./samples/SAFE/__tmp_98c3e3c1.c:154:17: error: expected expression at end of input
  154 |                 if (mat1.rows !=
      |                 ^~
./samples/SAFE/__tmp_98c3e3c1.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98c3e3c1.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98c3e3c1.c:154:17: error: expected declaration or statement at end of input
